removed flask-sqlalchemy dependency

--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,8 @@ name = "pypi"
 [packages]
 python-twitter = "*"
 ipython = "*"
-flask-sqlalchemy = "*"
 redis = "*"
+flask = "*"
 
 [requires]
 python_version = "3.5"
